部门创建，部门树查询